--- a/test.ipynb
+++ b/test.ipynb
@@ -5,7 +5,17 @@
    "execution_count": null,
    "id": "a431b07b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'base (Python 3.10.16)' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages."
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -50,6 +60,7 @@
     "def gradient_descent_linear(X, y, lr=0.1, epochs=2000):\n",
     "    X_b = np.c_[np.ones((X.shape[0], 1)), X]  # add bias term\n",
     "    theta = np.zeros(X_b.shape[1])\n",
+    "    #hello\n",
     "    for _ in range(epochs):\n",
     "        gradients = 2 / X_b.shape[0] * X_b.T.dot(X_b.dot(theta) - y)\n",
     "        theta -= lr * gradients\n",
